--- a/views/paroles-editor.ejs
+++ b/views/paroles-editor.ejs
@@ -190,6 +190,7 @@
         <script src="/assets/js/awareness-modules/username.js"></script>
         <script src="/assets/js/awareness-modules/paroles.js"></script>
         <script src="/assets/js/awareness-modules/voice-recognition.js"></script>
+        <script src="/assets/js/awareness-modules/hoverlink.js"></script>
         <% include script-dbjs %>
 		<% include notifications %>
 		<% 
@@ -201,6 +202,7 @@
 			"use strict";
             var version = 0;
 
+            var HoverLink;
             var timeoutUpdateUsername = null;
             var serverDB;
             var client;
@@ -341,6 +343,8 @@
 
                 coordinator = new Mute.Coordinator('<%= docID %>', serverDB);
                 editor = new Mute.AceEditorAdapter('<%= editorID %>', coordinator);
+                HoverLink = require("hoverlink").HoverLink;
+                editor.hoverLink = new HoverLink(editor.editor);
 
                 $('#<%= lastModificationDateItemID %>').lastModificationDateModule({ coordinator: coordinator });
                 if(<%= privateDoc %> === false) {
