--- a/views/private-editor.ejs
+++ b/views/private-editor.ejs
@@ -368,7 +368,6 @@
                     $('#panelControllerIcon').removeClass('glyphicon-arrow-left').addClass('glyphicon-arrow-right');
                     $('#btnPanelController').attr('onclick', 'hideCollaboratorsList()');
                 }, 0);
-
             }
 
             function hideCollaboratorsList() {
@@ -381,7 +380,7 @@
                     $('#btnPanelController').attr('onclick', 'showCollaboratorsList()');
                 }, 400);
             }
-
         </script>
+        <% include script-download-app %>
 	</body>
 </html>
