Refactor the check version system, the edition/history mode and the online/offline mode into jQuery plugins Add a self-destroy system to the awareness modules

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,10 +14,9 @@
             			<h1>
                             <strong>Try MUTE, the Multi-User Text Editor</strong>
                             <span class="pull-right">
-                                <a href="/doc/demo" class="btn btn-default">
-                                    <span class="glyphicon glyphicon-edit"></span>
-                                    Full interface
-                                </a>
+                                <button id="btnEditorMode" class="btn btn-default"></button>
+                                <button id="btnConnexionManager" class="btn btn-default"></button>
+                                <div id="divConnexionManagerToken"></div>
                             </span>
                         </h1>
                     </div>
@@ -26,10 +25,14 @@
         </div>
         <hr>
         <div class="row">
-            <button id="btnPanelController" class="btn btn-default pull-right" style="margin-right: 30px;" onclick="hideCollaboratorsList();">
-                <span id="panelControllerIcon" class="glyphicon glyphicon-arrow-right"></span>
-                <span id="panelControllerLabel">Hide list</span>
-            </button>
+            <div class="col-md-2"></div>
+            <div id="divWarningMessage" class="col-md-6 col-md-offset-1"></div>
+            <div class="col-md-2 pull-right">
+                <button id="btnPanelController" class="btn btn-default" style="margin-right: 30px;" onclick="hideCollaboratorsList();">
+                    <span id="panelControllerIcon" class="glyphicon glyphicon-arrow-right"></span>
+                    <span id="panelControllerLabel">Hide list</span>
+                </button>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-10" id="divMain" style="padding-right: 0px;">
@@ -116,7 +119,10 @@
         <script src="/assets/js/awareness-modules/collaborators-list.js"></script>
         <script src="/assets/js/awareness-modules/username.js"></script>
         <script src="/assets/js/awareness-modules/hoverlink.js"></script>
-		<script>
+        <script src="/assets/js/check-version.js"></script>
+		<script src="/assets/js/connexion-manager.js"></script>
+        <script src="/assets/js/editor-mode-manager.js"></script>
+        <script>
 			"use strict";
 
             var HoverLink;
@@ -130,72 +136,19 @@
             var infosUsersModule;
 
             var online = false;
-            var posting = $.post('/ajax/testConnection');
-            posting.done(function (data) {
-                online = true;
-            });
-            posting.fail(function () {
-                console.log('Yo');
-                location.href = '/list';
-            });
-            posting.always(function () {
-                openDB()
-                .done(function (s) {
-                    console.log('On passe ici ?');
-                    serverDB = s
-                    serverDB.docs.query()
-                    .filter('docID', '<%= docID %>')
-                    .execute()
-                    .done(function (results) {
-                        var doc;
-                        if(results.length === 0) {
-                            version = 1;
-                            doc = {
-                                docID: '<%= docID %>',
-                                version: 1
-                            };
-                            serverDB.docs.add(doc)
-                            .done(function (item) {
-                                initPage();
-                            });
-                        }
-                        else {
-                            version = results[0].version + 1;
-                            serverDB.docs.query()
-                            .filter('docID', '<%= docID %>')
-                            .modify({ version: version })
-                            .execute()
-                            .done(function (results) {
-                                initPage();
-                            });
-                        }
-
-                        var interval = setInterval(function () {
-                            serverDB.docs.query()
-                            .filter('docID', '<%= docID %>')
-                            .execute()
-                            .done(function (results) {
-                                if(results.length === 1) {
-                                    if(results[0].version !== version) {
-                                        network.toOfflineMode();
-                                        editor.toEditionMode();
-                                        hideCollaboratorsList();
-                                        $('.row button').prop('disabled', true);
-                                        $('.row input').prop('readOnly', true);
-                                        console.log(results[0].version + ' !== ' + version);
-                                        $('#modalCloseTab').modal('show');
-                                        coordinator.dispose();
-                                        network.dispose();
-                                        editor.disable();
-
-                                        coordinator = null;
-                                        editor = null;
-                                        network = null;
-                                        clearInterval(interval);
-                                    }
-                                }
-                            });
-                        }, 3000);
+            var posting;
+            
+            $(function () {
+                posting = $.post('/ajax/testConnection');
+                posting.done(function (data) {
+                    online = true;
+                });
+                posting.always(function () {
+                    openDB()
+                    .done(function (s) {
+                        console.log('On passe ici ?');
+                        serverDB = s
+                        initPage();
                     });
                 });
             });
@@ -222,7 +175,7 @@
                     infosUsersModule = new Mute.InfosUsersModule('<%= docID %>', coordinator, editor, network, null, serverDB);
                     editor.setInfosUsersModule(infosUsersModule);
                     network.setInfosUsersModule(infosUsersModule);
-                    $('#inputUsername').UsernameModule({
+                    $('#inputUsername').usernameModule({
                         infosUsersModule: infosUsersModule
                     });
                     $('#list-collaborators').collaboratorsListModule({
@@ -236,11 +189,52 @@
                         cursorsCSSClasses: ['mute-remote-cursor-0', 'mute-remote-cursor-1', 'mute-remote-cursor-2'],
                         selectionsCSSClasses: ['mute-remote-selection-0', 'mute-remote-selection-1', 'mute-remote-selection-2']
                     });
+                    $('#divWarningMessage').checkVersionModule({
+                        /*
+                        *   options : {
+                        *       docID
+                        *       coordinator
+                        *       serverDB
+                        *       timeInterval
+                        *       toDisabled: list of item which will be switched to disabled
+                        *       toReadOnly: list of item which will be switched to read only
+                        *   }
+                        */
+                        docID: '<%= docID %>',
+                        coordinator: coordinator,
+                        serverDB: serverDB,
+                        timeInterval: 3000,
+                        toDisabled: []
+                    });
+                    $('#btnConnexionManager').connexionManagerModule({
+                        /*
+                        *   options : {
+                        *       coordinator
+                        *       network
+                        *       token
+                        *   }
+                        */
+                        coordinator: coordinator,
+                        network: network,
+                        token: $('#divConnexionManagerToken')
+                    });
                     coordinator.setNetwork(network);
                     network.on('receiveParole', function (data) {
                         console.log('Essai: ', data);
                     });
                 }
+                $('#btnEditorMode').editorModeManagerModule({
+                    /*
+                    *   options : {
+                    *       coordinator
+                    *       textEditorAdapter
+                    *       token
+                    *   }
+                    */
+                    coordinator: coordinator,
+                    textEditorAdapter: editor,
+                    token: $('#divWarningMessage')
+                });
                 coordinator.init();
                 console.log('<%= docID %>');
             }
