--- a/views/list.ejs
+++ b/views/list.ejs
@@ -16,14 +16,14 @@
 	                            <div class="panel panel-primary">
 					                <div class="panel-heading">
 					                    <span class="glyphicon glyphicon-list"></span>Documents list
-					                    <div class="pull-right action-buttons">
-					                        <div class="pull-right">
+					                    <span class="pull-right action-buttons">
+					                        <span class="pull-right">
 					                            <button type="button" class="btn btn-xs btn-default">
 					                            	<span class="glyphicon glyphicon-trash"></span>
 					                            	Delete selection
 					                            </button>
-					                        </div>
-					                    </div>
+					                        </span>
+					                    </span>
 					                </div>
 					                <div class="panel-body">
 					                    <ul id ="list-docs" class="list-group">
@@ -33,7 +33,11 @@
 					                    <div class="row">
 					                        <div class="col-md-6">
 					                            <h6>
-					                                Total Count <span class="label label-info" id="nbDocs">0</span></h6>
+					                                Total Count 
+                                                    <span class="label label-info" id="nbDocs">
+                                                        0
+                                                    </span>
+                                                </h6>
 					                        </div>
 					                    </div>
 					                </div>
