--- a/views/css.ejs
+++ b/views/css.ejs
@@ -3,5 +3,5 @@
 <link rel="stylesheet" href="/assets/css/awareness.css">
 <link rel="stylesheet" href="/assets/css/mute.css">
 <link rel="stylesheet" href="/assets/css/highlightjs.min.css">
-<link rel="stylesheet" href="/assets/css/range-selectors.css">
 <link rel="stylesheet" href="/assets/css/offline-theme-default-indicator.css">
+<link rel="stylesheet" href="/assets/css/slider.css">
