--- a/views/css.ejs
+++ b/views/css.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-<link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/assets/css/awareness.css">
 <link rel="stylesheet" href="/assets/css/mute.css">
 <link rel="stylesheet" href="/assets/css/highlightjs.min.css">
