Add insertParoleIntoEditor and debug paroles' broadcast

--- a/views/paroles-editor.ejs
+++ b/views/paroles-editor.ejs
@@ -254,6 +254,7 @@
                         listCSSClasses: ['mute-collaborator-indicator-0', 'mute-collaborator-indicator-1', 'mute-collaborator-indicator-2']
                     });
                     $('#list-paroles').parolesModule({
+                        textEditor: editor,
                         network: network
                     });
                     $('#btn-voice-recognition').voiceRecognitionModule({
