hide off-line button

--- a/views/private-peer-editor.ejs
+++ b/views/private-peer-editor.ejs
@@ -14,6 +14,7 @@
                             <strong><%= docID %></strong>
                             <span class="pull-right">
                                 <button id="btnEditorMode" class="btn btn-default"></button>
+                                <button id="btnConnexionManager" class="btn btn-default hidden"></button>
                                 <div id="divConnexionManagerToken"></div>
                             </span>
                         </h1>
