--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -1,5 +1,6 @@
+<script src="/assets/js/netflux.js"></script>
 <script src="/assets/js/jquery-2.1.0.js"></script>
 <script src="/assets/js/jquery-ui.min.js"></script>
 <script src="/assets/js/bootstrap.min.js"></script>
 <script src="/assets/js/highlightjs.min.js"></script>
-<script src ="/assets/js/mute.js"></script>
+<script src="/assets/js/mute.js"></script>
