[+] signaling server URI is now built from environment variable

--- a/views/private-peer-editor.ejs
+++ b/views/private-peer-editor.ejs
@@ -152,7 +152,8 @@
         %>
 		<script>
 			"use strict";
-						var SIGNALING_SERVER = 'ws://sigver-coastteam.rhcloud.com:8000';
+			//var SIGNALING_SERVER = 'ws://sigver-coastteam.rhcloud.com:8000';
+			var SIGNALING_SERVER = '<%= signalingServerURI %>';
             var version = 0;
 
             var HoverLink;
