--- a/views/home.ejs
+++ b/views/home.ejs
@@ -137,7 +137,7 @@
 
             var online = false;
             var posting;
-            
+
             $(function () {
                 posting = $.post('/ajax/testConnection');
                 posting.done(function (data) {
@@ -168,7 +168,7 @@
                 editor = new Mute.AceEditorAdapter('<%= editorID %>', coordinator);
                 HoverLink = require("hoverlink").HoverLink;
                 editor.hoverLink = new HoverLink(editor.editor);
-                
+
                 coordinator.setEditor(editor);
                 if(online === true) {
                     network = new Mute.SocketIOAdapter(coordinator);
@@ -182,7 +182,7 @@
                         infosUsersModule: infosUsersModule,
                         listCSSClasses: ['mute-collaborator-indicator-0', 'mute-collaborator-indicator-1', 'mute-collaborator-indicator-2']
                     });
-                    $().remoteIndicatorsModule({ 
+                    $().remoteIndicatorsModule({
                         infosUsersModule: infosUsersModule,
                         textEditorAdapter: editor,
                         networkAdapter: network,
@@ -234,14 +234,18 @@
                 });
                 coordinator.init();
                 console.log('<%= docID %>');
+
+
+								var loggingServiceSocket = io.connect(location.host+':'+(parseInt(location.port)-1));
+						    window.LoggingService = new LoggingService(coordinator.docID, coordinator.replicaNumber, loggingServiceSocket, 1000);
             }
 
             function showCollaboratorsList() {
                 $('#divMain').animate({ width: '83,33%' });
                 $('#divInfosSup').animate({ width: '16,67%' }).show();
-                setTimeout(function () { 
+                setTimeout(function () {
                     if(editor !== null && editor !== undefined) {
-                        editor.editor.resize();   
+                        editor.editor.resize();
                     }
                     $('#panelControllerLabel').html('Hide list');
                     $('#panelControllerIcon').removeClass('glyphicon-arrow-left').addClass('glyphicon-arrow-right');
@@ -255,7 +259,7 @@
                 $('#divMain').animate({ width: '100%'});
                 setTimeout(function () {
                     if(editor !== null && editor !== undefined) {
-                        editor.editor.resize();   
+                        editor.editor.resize();
                     }
                     $('#panelControllerLabel').html('Show list');
                     $('#panelControllerIcon').removeClass('glyphicon-arrow-right').addClass('glyphicon-arrow-left');
