--- a/views/scripts-editor.ejs
+++ b/views/scripts-editor.ejs
@@ -1,7 +1,7 @@
 <script src="/assets/js/ace/src/ace.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/asserts/js/GoTime.js"></script>
-<script src="/asserts/js/logging.js"></script>
-<script src="/asserts/js/timelog.js"></script>
+<script src="/assets/js/GoTime.js"></script>
+<script src="/assets/js/logging.js"></script>
+<script src="/assets/js/timelog.js"></script>
 <script src="/assets/js/mute-client/build/mute-client.js"></script>
 <script src="/assets/js/zeroclipboard/dist/ZeroClipboard.js"></script>
