Add iframe resizer to MUTE with netflux

--- a/views/private-peer-editor.ejs
+++ b/views/private-peer-editor.ejs
@@ -145,6 +145,7 @@
         <script src="/assets/js/connexion-manager.js"></script>
         <script src="/assets/js/editor-mode-manager.js"></script>
         <script src="/assets/js/peer.js"></script>
+        <script src="/assets/js/iframeResizer.contentWindow.min.js"></script>
 		<%
         	if(privateDoc === true) {
         		%> <% include modal-pwd-doc %> <%
