--- a/views/private-peer-editor.ejs
+++ b/views/private-peer-editor.ejs
@@ -43,6 +43,9 @@
                     <span id="panelControllerIcon" class="glyphicon glyphicon-arrow-right"></span>
                     <span id="panelControllerLabel">Hide list</span>
                 </button>
+								<button id="btnPanelController" style="padding: 4px 8px" class="btn btn-default" style="margin-right: 30px;" onclick="showDialog();">
+								<span id="panelControllerLabel" ><img src="/assets/img/eve.png"></span>
+								</button>
             </div>
         </div>
         <div class="row">
@@ -106,25 +109,12 @@
         <div class="modal fade" id="modalCloseTab" tabindex="-1" role="dialog" aria-labelledby="modalCloseTabLabel" data-backdrop="static" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">
-                        <span aria-hidden="true">&times;</span>
-                        </button>
-                        <h4 class="modal-title" id="modalCloseTabLabel">Open in a new tab</h4>
-                    </div>
                     <div id="modal-body" class="modal-body">
-                        <p class="lead">
-                            This document has been opened in another tab/window. In order to avoid some mischievous bugs, you can no longer edit this document using this tab/window. Please go back to your documents list.
-                        </p>
+												<input type="text" class="form-control" id="botUrl" placeholder="URL">
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">
-                            Dismiss pop-up
-                        </button>
-                        <a href="/list" type="button" class="btn btn-primary">
-                            <span class="glyphicon glyphicon-list"></span>
-                            Documents list
-                        </a>
+												<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                      	<button type="button" class="btn btn-default" data-dismiss="modal" onClick="addBot()">Add bot</button>
                     </div>
                 </div>
             </div>
@@ -177,7 +167,6 @@
                 posting.always(function () {
                     openDB()
                     .done(function (s) {
-                        console.log('On passe ici ?');
                         serverDB = s
                         initPage();
                     });
@@ -294,6 +283,15 @@
                     $('#btnPanelController').attr('onclick', 'showCollaboratorsList()');
                 }, 400);
             }
+
+						function showDialog() {
+							$('#modalCloseTab').modal('show');
+						}
+
+						function addBot() {
+							console.log('URL: ' + document.getElementById('botUrl').value)
+							network.addBot(document.getElementById('botUrl').value)
+						}
         </script>
         <% include script-download-app %>
 	</body>
